--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Dependency directory
 node_modules
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.DS_Store
+.idea
+.vscode 
+
+.env
